Task2/diff-name-space.yaml
apiVersion: v1
kind: Pod
metadata:
  name: diff-namespace
  namespace: javaapp
spec:
  containers:
  - name: diff-namespace-container
    image: nginx:latest
