Task2/outgoing-traffic.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-test
  namespace: nodsapp
spec:
  containers:
  - name: alpine
    image: alpine
    command:
    - sleep
    - "3600"
