Task2/trusted.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-client2
  namespace: nodsapp
  labels:
    app: nodsapp
spec:
  containers:
  - name: nginx
    image: nginx:latest
    command:
    - sleep
    - "3600"
