Task2/cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-service
  namespace: nodsapp
  labels:
    app: cache
spec:
  selector:
    app: cache
  ports:
  - port: 8080
    targetPort: 8080
  
  type: LoadBalancer
