Task2/my-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: nodsapp
  labels:
    app: my-app
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
#      nodePort: 31000
#  type: ClusterIP
#type: Nodeport
  type: LoadBalancer
