Task2/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-app-network-policy
  namespace: nodsapp
spec:
  podSelector:
    matchLabels:
      app: my-app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {} # Allow incoming traffic from any pod in the same namespace
    - podSelector:
        matchLabels:
          app: trusted # Allow incoming traffic from the pod with label app=trusted
  egress:
  - to:
    - podSelector: {} # Allow outgoing traffic to any pod in the same namespace
